--- a/styles/global.css
+++ b/styles/global.css
@@ -27,7 +27,9 @@
 body {
   background: var(--bg);
   color: var(--fg);
-  font: 16px/1.5 var(--font-sans);
+  font-size: 16px;
+  line-height: 1.5;
+  font-family: var(--font-sans);
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
