--- a/styles/pages/home/hero.module.css
+++ b/styles/pages/home/hero.module.css
@@ -9,10 +9,7 @@
   margin: auto auto 0;
 }
 
-.video {
-  display: block;
-  max-width: 100%;
-  max-height: 100%;
+.terminal {
   margin: auto;
 }
 
