--- a/styles/pages/home/hero.module.css
+++ b/styles/pages/home/hero.module.css
@@ -1,19 +1,16 @@
 .root {
-  height: calc(100vh - 85px);
-  display: grid;
-  grid: 0.5fr 50vh 1fr / auto-flow;
+  margin: 3rem 0 4rem;
+  display: flex;
+  flex-direction: column;
   font-size: 14px;
 }
 
 .logo {
-  margin: auto auto 0;
+  margin: auto;
 }
 
-.video {
-  display: block;
-  max-width: 100%;
-  max-height: 100%;
-  margin: auto;
+.terminal {
+  margin: 3rem auto;
 }
 
 .download {
@@ -32,4 +29,14 @@
 .download > .other:hover {
   color: white;
   border-color: white;
+}
+
+@media (max-width: 600px) {
+  .root {
+    margin: 1rem 0 4rem;
+  }
+
+  .terminal {
+    margin: 2rem auto;
+  }
 }
