--- a/styles/pages/home/content.module.css
+++ b/styles/pages/home/content.module.css
@@ -57,6 +57,11 @@
 .root pre {
   line-height: 18px;
   margin: 30px;
+  border: 1px solid #444;
+  margin: 0 0 20px 0;
+  padding: 20px;
+  white-space: pre;
+  overflow: auto;
 }
 
 .root p code,
