render preview gifs in regular img tags

--- a/components/plugin/plugin.module.css
+++ b/components/plugin/plugin.module.css
@@ -76,3 +76,10 @@
     max-width: 20ch;
   }
 }
+
+.image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center top;
+}
